# openstack-rating-graph

./: .env.example  .gitignore  Cargo.toml  README.md  test-openstack.sh
.github/workflows/: release.yaml  testing.yaml
src/: cache.rs  config.rs  data.rs  handlers.rs  main.rs  models.rs  server.rs
templates/: index.html
